# ai-echocardiography-for-low-resource-countries

./: .gitignore  CODE_OF_CONDUCT.md  ConvertDICOMtoAVI.py  README.md  print_system.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  not_working.md
Anonymization/: README.md  anonimize_video_sonosite.py  anonymize_video_blackblock.sh
PRETUS_Plugins/: CMakeLists.txt  README.md
PRETUS_Plugins/Plugin_4chdetection/: CMakeLists.txt  Widget_FourChDetection.cxx  Widget_FourChDetection.h  Worker_FourChDetection.cxx  Worker_FourChDetection.h
PRETUS_Plugins/Plugin_fourchdetection/: Plugin_FourChDetection.cxx  README.md  Widget_FourChDetection.cxx
Preprocessing/: ConvertDICOMtoAVI.py  README.md  video_to_sliding_video.py
anonymisation/: README.md
anonymization/: README.md  anonymize_video.sh  anonymize_video_blackblock.sh
data/: README.md
data/demodata/: README.md
data/labelling/: README.md
data/models/: README.md
data/rawdata/: README.md
data/validation/: README.md
datasets/: README.md
datasets/anonymisation/: README.md  anonymise_video_blackblock.sh
datasets/config_files/: config_i2v.yml  config_v2i.yml
datasets/curation-and-selection/: README.md  config.yml  png_to_avi.py  png_to_gif.py  video2imageframes.py  video_to_imageframes.py  video_to_sliding_video.py
datasets/dataloaders/: EchocardiographicVideoDataset.py  README.md
datasets/labelling-annotation/: README.md
datasets/preprocessing/: README.md  convertDICOMtoAVI.py
datasets/rawdata/: README.md
dependencies/: README.md
dependencies/create-virtual-environment/: README.md  env.yml
dependencies/virtual-environment/: README.md  update-ve.bash  update-ve.sh  ve.yml
docs/: README.md
docs/system/: README.md
figures/framegrabber/: README.md
models/: README.md
preprocessing/: convertDICOMtoAVI.py
scripts/: config_filesannotation_list_full.txt  config_filesannotation_list_train.txt  config_filesannotation_list_validate.txt  config_filesvideo_list_full.txt  config_filesvideo_list_train.txt  config_filesvideo_list_validate.txt  dataloader_demo.py  print_system.py
scripts/anonymisation/: README.md  anonymise_video.sh
scripts/computer-features/: README.md  print_system.py
scripts/config_files/: annotation_list.txt  annotation_list_full.txt  annotation_list_train.txt  config_4cv.yml  config_echo_classes.yml  config_echodatasets.yml  config_v2i.yml  video_list.txt  video_list_full.txt  video_list_train.txt
scripts/curation-and-selection/: README.md  png_to_gif.py  video_channel_measurement.py  video_to_segmentation_data.py
scripts/curation-selection-validation/: README.md  validation-of-4cv-labels.ipynb  video_to_segmentation_data.py
scripts/dataloaders/: README.md  (+6 more)
source/: README.md
source/PRETUS_Plugins/Plugin_fourchdetection/: CMakeLists.txt  Plugin_FourChDetection.h  README.md  Worker_FourChDetection.h  plugin_FourChDetection_config.h.in
source/PRETUS_Plugins/Plugin_fourchdetection/python_fourchdetection/: FourChDetection_demo.py  FourChDetection_worker.py  README.md
source/PRETUS_Plugins/Plugin_fourchdetection/python_fourchdetection/fcd_utils/: README.md  classifiers.py
source/PRETUS_Plugins/Plugin_fourchdetection/python_fourchdetection/models/: README.md
(+157 files in other folders)
